<resources>
    <string name="app_name">Metal Lyrics</string>
    <string name="button_settings">Settings</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_retrieve_cover">Retrieve cover</string>
    <string name="button_retrieve_covers">Retrieve missing covers</string>
    <string name="title_activity_settings">Settings</string>
    <string name="lyrics_not_found">No lyrics found</string>
    <string name="network_unavailable">Network not available</string>
    <string name="pref_autoDownloadCovers">Auto download covers</string>
    <string name="pref_autoDownloadCoversSumm">Download missing covers for album of current song</string>
    <string name="pref_downloadCoversToMediaFolder">Add to media folder</string>
    <string name="pref_downloadCoversToMediaFolderSumm">Download the covers to the media folder (as cover.jpg)</string>
    <string name="pref_covers_title">Covers</string>
    <string name="pref_retrieveCovers">Retrieve missing covers</string>
    <string name="pref_statistics_title">Statistics</string>
    <string name="pref_totalLyrics">Number of lyrics:</string>
</resources>
